--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -92,14 +92,196 @@
 </div> -->
 
 <!-- 
-<div class="tooltip_orange">
-  <span>Double Discount</span>
-  <div class="tooltip-content">
-    <p>You can get extra discount width coupon</p>
-  </div>
+<div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div>
 </div> 
 -->
 
+<div class="card clearfix" data-score="6" data-price="469.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZGAV0p"><img src="https://images-na.ssl-images-amazon.com/images/I/61hFKPHoz7L._SY606_.jpg" alt="Apple iPad Air" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>88 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>6% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZGAV0p">Apple iPad Air (10.5-inch, Wi-Fi, 64GB) - Space Gray</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$469.00</span><span class="ori_price">$499.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZGAV0p">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="24" data-price="249.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2L5f52C"><img src="https://images-na.ssl-images-amazon.com/images/I/7149SH0d%2BgL._SY606_.jpg" alt="Apple iPad" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>3,474 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>24% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2L5f52C">Apple iPad (Wi-Fi, 32GB) - Space Gray (Latest Model)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$249.00</span><span class="ori_price">$329.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2L5f52C">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="24" data-price="328.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MY6j97"><img src="https://images-na.ssl-images-amazon.com/images/I/71b0Gnu75dL._SY606_.jpg" alt="Apple iPad (Wi-Fi, 128GB)" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>3,474 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>24% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MY6j97">Apple iPad (Wi-Fi, 128GB) - Gold (Latest Model)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$328.00</span><span class="ori_price">$429.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2MY6j97">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="16" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WQGW8Y"><img src="https://images-na.ssl-images-amazon.com/images/I/71y0zFzcjwL._SX522_.jpg" alt="iPad 6th Generation Cases" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>472 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>16% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WQGW8Y">iPad 6th Generation Cases, iPad 2018 Case, iPad 9.7 Inch Case,Hybrid Shockproof Rugged Drop Protection Cover Built with Kickstand iPad 9.7 inch...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$15.99</span><span class="ori_price">$18.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WQGW8Y">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="17" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WT6xhp"><img src="https://images-na.ssl-images-amazon.com/images/I/71rFoKi1rDL._SX522_.jpg" alt="ZUGU CASE" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>2,367 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>17% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WT6xhp">ZUGU CASE - 9.7 iPad 2018/2017 5th / 6th Gen & iPad Air 1 Prodigy X Case - Very Protective But Thin + Convenient Magnetic Stand + Sleep/Wake Cover (Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.99</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WT6xhp">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="44" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2N0ifqL"><img src="https://images-na.ssl-images-amazon.com/images/I/91es20oSvOL._SX522_.jpg" alt="OtterBox Defender Series Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>727 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>44% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2N0ifqL">OtterBox Defender Series Case for iPad (5th Gen) / iPad (6th Gen) - Retail Packaging - Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.99</span><span class="ori_price">$89.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2N0ifqL">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2N0puPJ"><img src="https://images-na.ssl-images-amazon.com/images/I/61cRk8i8eNL._SX522_.jpg" alt="ProCase iPad 9.7 Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>4,605 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2N0puPJ">ProCase iPad 9.7 Case 2018 iPad 6th Generation Case / 2017 iPad 5th Generation Case - Ultra Slim Lightweight Stand Case</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$13.99</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2N0puPJ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="66" data-price="59.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2N2WxT2"><img src="https://images-na.ssl-images-amazon.com/images/I/81wwDDpY0DL._SX522_.jpg" alt="iPad Keyboard Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>989 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>66% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2N2WxT2">iPad Keyboard Case for iPad 2018 (6th Gen) - iPad 2017 (5th Gen) - iPad Pro 9.7 - iPad Air 2 & 1 - Thin & Light - 360 Rotatable...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$59.95</span><span class="ori_price">$174.99</span>
+        <div class="tooltip_orange">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount width coupon</p>
+          </div>
+        </div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2N2WxT2">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="22" data-price="34.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IXHJzV"><img src="https://images-na.ssl-images-amazon.com/images/I/81Cg3cv3wlL._SX679_.jpg" alt="YETI Tumbler" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>679 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>22% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IXHJzV">YETI Rambler 30 oz Stainless Steel Vacuum Insulated Tumbler w/MagSlider Lid, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$34.99</span><span class="ori_price">$44.96</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IXHJzV">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="93.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KrViL5"><img src="https://images-na.ssl-images-amazon.com/images/I/71u0pT-X%2BuL._SX522_.jpg" alt="Microsoft ype Cover" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>650 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KrViL5">Microsoft FMM-00001 Type Cover for Surface Pro - Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$93.00</span><span class="ori_price">$129.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KrViL5">Shop Now at Amazon</a></div>
+</div>
 
 <div class="card dealofday clearfix" data-score="67" data-price="discounted_price">
   <div class="image_box">
