--- a/app/views/deals/sneakers01M.html.erb
+++ b/app/views/deals/sneakers01M.html.erb
@@ -16,26 +16,166 @@
      <div class="guide_show shoes_wrap clearfix">
 
       <div class="flex guide_show_wrap" id="gallery">
-        <!-- <div class="flex column shoes_column" onclick="currentSlide(Page_Num)">
-          <img src="Image_URL">
+       <!--  <div class="column_box">
+          <div class="flex column shoes_column" onclick="currentSlide(Page_Num)">
+            <img src="Image_URL">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(Page_Num)">
+            <img src="Image_URL">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(Page_Num)">
+            <img src="Image_URL">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(Page_Num)">
+            <img src="Image_URL">
+          </div>
+          <div class="flex column shoes_column last_box" onclick="currentSlide(Page_Num)">
+            <img src="Image_URL">
+          </div>
         </div> -->
-        <div class="flex column shoes_column" onclick="currentSlide(1)">
-          <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+
+        <div class="column_box">
+          <div class="flex column shoes_column" onclick="currentSlide(1)">
+            <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(2)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(3)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236005_1.jpg">
+          </div>
+          <div class="flex column shoes_column tablet" onclick="currentSlide(4)">
+            <img src="https://cdn-images.farfetch-contents.com/13/84/93/91/13849391_17291159_480.jpg">
+          </div>
+          <div class="flex column shoes_column last_box" onclick="currentSlide(5)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236024_1.jpg">
+          </div>
         </div>
-        <div class="flex column shoes_column" onclick="currentSlide(2)">
-          <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
+ 
+        <div class="column_box">
+         <div class="flex column shoes_column" onclick="currentSlide(1)">
+            <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(2)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(3)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(4)">
+            <img src="https://cdn-images.farfetch-contents.com/13/84/93/91/13849391_17291159_480.jpg">
+          </div>
+          <div class="flex column shoes_column last_box" onclick="currentSlide(5)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236024_1.jpg">
+          </div>
         </div>
-        <div class="flex column shoes_column" onclick="currentSlide(3)">
-          <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236005_1.jpg">
+
+        <div class="column_box">
+         <div class="flex column shoes_column" onclick="currentSlide(1)">
+            <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(2)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(3)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(4)">
+            <img src="https://cdn-images.farfetch-contents.com/13/84/93/91/13849391_17291159_480.jpg">
+          </div>
+          <div class="flex column shoes_column last_box" onclick="currentSlide(5)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236024_1.jpg">
+          </div>
         </div>
-        <div class="flex column shoes_column" onclick="currentSlide(4)">
-          <img src="https://cdn-images.farfetch-contents.com/13/84/93/91/13849391_17291159_480.jpg">
+
+        <div class="column_box">
+         <div class="flex column shoes_column" onclick="currentSlide(1)">
+            <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(2)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(3)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(4)">
+            <img src="https://cdn-images.farfetch-contents.com/13/84/93/91/13849391_17291159_480.jpg">
+          </div>
+          <div class="flex column shoes_column last_box" onclick="currentSlide(5)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236024_1.jpg">
+          </div>
         </div>
-        <div class="flex column shoes_column" onclick="currentSlide(5)">
-          <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236024_1.jpg">
+
+        <div class="column_box">
+         <div class="flex column shoes_column" onclick="currentSlide(1)">
+            <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(2)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(3)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(4)">
+            <img src="https://cdn-images.farfetch-contents.com/13/84/93/91/13849391_17291159_480.jpg">
+          </div>
+          <div class="flex column shoes_column last_box" onclick="currentSlide(5)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236024_1.jpg">
+          </div>
         </div>
-        <div class="flex column shoes_column" onclick="currentSlide(6)">
-          <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M237062_1.jpg">
+
+        <div class="column_box">
+         <div class="flex column shoes_column" onclick="currentSlide(1)">
+            <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(2)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(3)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(4)">
+            <img src="https://cdn-images.farfetch-contents.com/13/84/93/91/13849391_17291159_480.jpg">
+          </div>
+          <div class="flex column shoes_column last_box" onclick="currentSlide(5)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236024_1.jpg">
+          </div>
+        </div>
+
+        <div class="column_box">
+         <div class="flex column shoes_column" onclick="currentSlide(1)">
+            <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(2)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(3)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(4)">
+            <img src="https://cdn-images.farfetch-contents.com/13/84/93/91/13849391_17291159_480.jpg">
+          </div>
+          <div class="flex column shoes_column last_box" onclick="currentSlide(5)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236024_1.jpg">
+          </div>
+        </div>
+
+        <div class="column_box last_column_box">
+         <div class="flex column shoes_column" onclick="currentSlide(1)">
+            <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(2)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(3)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236005_1.jpg">
+          </div>
+          <div class="flex column shoes_column" onclick="currentSlide(4)">
+            <img src="https://cdn-images.farfetch-contents.com/13/84/93/91/13849391_17291159_480.jpg">
+          </div>
+          <div class="flex column shoes_column last_box" onclick="currentSlide(5)">
+            <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191011M236024_1.jpg">
+          </div>
         </div>
 
       </div><!--./show_wrap-->
@@ -83,7 +223,12 @@
                     <h5>*Pricing may change and deals can expire fast.</h5>
                     <h5>*Condition of color and size may change.</h5>
                   </div>
-                  
+                  <div class="wrapper">
+                    <button id="popup">Modal Me</button>
+                  </div>
+                  <div class="size_container">
+                    <span class="btn-open">open</span>
+                  </div>
                 </div>
               </div>
             </div>
