--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -15,25 +15,50 @@
   </div>
 
   <div class="guide_show">
-   
+    
+
     <div class="flex guide_show_wrap" id="gallery">
-      <div class="flex column" onclick="currentSlide(1)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg">
+      <!-- <div class="column_box">
+        <div class="flex column" onclick="currentSlide(Page_Number)">
+          <img src="Image_URL">
+        </div>
+        <div class="flex column" onclick="currentSlide(Page_Number)">
+          <img src="Image_URL">
+        </div>
+        <div class="flex column" onclick="currentSlide(Page_Number)">
+          <img src="Image_URL">
+        </div>
+        <div class="flex column" onclick="currentSlide(Page_Number)">
+          <img src="Image_URL">
+        </div>
+      </div> -->
+      <div class="column_box">
+        <div class="flex column" onclick="currentSlide(1)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg">
+        </div>
+        <div class="flex column" onclick="currentSlide(2)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/61WhgoU4LzL._SX679_.jpg">
+        </div>
+        <div class="flex column" onclick="currentSlide(3)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg">
+        </div>
+        <div class="flex column last_box" onclick="currentSlide(4)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/A185AKfrliL._SX522_.jpg">
+        </div>
       </div>
-      <div class="flex column" onclick="currentSlide(2)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/61WhgoU4LzL._SX679_.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(3)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(4)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/A185AKfrliL._SX522_.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(5)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(6)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/71uX2g5BzvL._SX522_.jpg">
+      <div class="column_box last_column_box">
+        <div class="flex column" onclick="currentSlide(5)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg">
+        </div>
+        <div class="flex column" onclick="currentSlide(6)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/71uX2g5BzvL._SX522_.jpg">
+        </div>
+        <div class="flex column" onclick="currentSlide(6)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/71uX2g5BzvL._SX522_.jpg">
+        </div>
+        <div class="flex column last_box" onclick="currentSlide(6)">
+          <img src="https://images-na.ssl-images-amazon.com/images/I/71uX2g5BzvL._SX522_.jpg">
+        </div>
       </div>
     </div><!--./show_wrap-->
 
