--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -226,11 +226,14 @@
 .guide_show .group:before,
 .guide_show .group:after{content:'';display:block;}
 .guide_show .group:after{clear:both;}
-.guide_show .column{float:left;width:23%;margin:1%;transition:0.3s;}
-.guide_show .shoes_column{float:left;width:18%;margin:1%;transition:0.3s;}
+.guide_show .column_box .last_box{border-right:1px solid #ccc;}
+.guide_show .column{float:left;width:25%;transition:0.3s;border-top:1px solid #ccc;border-left:1px solid #ccc;padding:10px;}
+.guide_show .last_column_box .column{border-bottom:1px solid #ccc;}
+.guide_show .shoes_column{float:left;width:20%;transition:0.3s;}
 .guide_show .column:hover{box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2); cursor: pointer; }
-.guide_show .column img{width:100%;height:260px;object-fit:cover;box-shadow:0 4px 11px 0 rgba(221,221,221,.5)}
+.guide_show .column img{width:100%;height:260px;object-fit:cover;}
 .guide_show .shoes_column img{object-fit:contain;padding:10px;}
+
 .guide_show .modal{overflow:scroll;background-color:white;position:fixed;left:0;top:-500%;height:100%;width:100%;transition:top 0.6s ease-in-out;z-index:500;}
 .guide_show .show{top:0;}
 .guide_show .modal-content{height: 100%; width: 90%;margin: 120px auto 0 auto;padding: 0;position:relative;}
@@ -267,10 +270,12 @@
 .guide_show .shoes_numbering{top:-80px;}
 
 @media screen and (max-width:640px){
+  .shoes_wrap{margin-top:50px;}
   .guide_header{margin:80px 0 20px 0;}
   .guide_header h2{font-size:25px;width:100%;}
   .guide_show .flex{display:block;align-items:center;justify-content:center;}
-  .guide_show .column{width:48%;}
+  .guide_show .column_box .last_box{border:none;}
+  .guide_show .column{width:48%;border:none;padding:0;margin:1%;box-shadow:0 4px 11px 0 rgba(221,221,221,.5);}
   .guide_show .column:hover{box-shadow: 0 0 0;}
   .guide_show .column img{width:100%;height:175px;object-fit:cover;border-radius:10px;}
   .guide_show .shoes_column img{object-fit:contain;}
@@ -288,10 +293,10 @@
 @media screen and (min-width:641px) and (max-width:1199px){
  .guide_header{margin:80px 0 30px 0;}
  .guide_header h2{font-size:40px;width:60%;}
- .guide_show .column{float:left;width:31%;}
+ .guide_show .column{float:left;width:31%;border:1px solid #ccc;}
  .guide_show .column:hover{box-shadow:0,0,0;}
  .guide_show .column img{height:250px;}
- .guide_show .shoes_column{width:23%;}
+ .guide_show .shoes_column{width:25%;margin:0;}
  .guide_show .shoes_column img{height:200px;}
  .guide_show .close{right:-40px;}
  .guide_show .prev, .guide_show .next{margin:30% -8% 0 -8%;}
@@ -487,5 +492,11 @@
   .blogs .blog_side .tab-menu-box .inner address{font-size:15px;}
 }
 /* End Blog Detail */
+
+
+
+
+
+
 
 
