--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -5,16 +5,16 @@
         
       <div class="show_box clearfix">
         <div class="show_img">
-          <a href="<%= @gadget.gg_url %>"><img src="<%= @gadget.gg_img %>"></a>
+          <a target="_blank" href="<%= @gadget.gg_url %>"><img src="<%= @gadget.gg_img %>"></a>
         </div>
         <div class="show_inner">
-         <h2><a href="<%= @gadget.gg_url %>"><%= @gadget.gg_title %></a></h2>
+         <h2><a target="_blank" href="<%= @gadget.gg_url %>"><%= @gadget.gg_title %></a></h2>
          <strong>BY <%= @gadget.gg_from %></strong>
          <% if @gadget.gg_intro.present? %>
            <span><p><%= @gadget.gg_intro %></p></span>
          <% end %>
          <p>$<%= @gadget.gg_aprice %></p>
-         <a href="<%= @gadget.gg_url %>">Check it out on <em><%= @gadget.gg_spare_01 %></em></a>
+         <a target="_blank" href="<%= @gadget.gg_url %>">Check it out on <em><%= @gadget.gg_spare_01 %></em></a>
          <!-- <div class="option_btn">
            <a href="/gadgets?category=Tech">See More Tech</a>
          </div> -->
