--- a/app/views/deals/_codes.js.erb
+++ b/app/views/deals/_codes.js.erb
@@ -152,9 +152,14 @@
       slides[slideIndex - 1].classList.add('pop'); // then add pop, which shows the image 
     }
 
-  
+   //For size table for delas of shoes  
+    $('#clickMeBtn').click(function(){
+      $('.popup-container').toggle();
+    });
 
-
+    $('#closeBtn').click(function(){
+      $('.popup-container').toggle();
+    });
 
 
 
