--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -74,11 +74,13 @@
              <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg"></a>
             </div>
             <div class="inner">
-              <h2>The Original As Seen on TV Handsfree Easy Jar Opener</h2>
+              <h2><a href="#n">The Original As Seen on TV Handsfree Easy Jar Opener</a></h2>
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out on <span>Amazon</span></a>
+              <div class="btn">
+                <a href="#n">Check it Out on <span>Amazon</span></a>
+              </div>
             </div>
           </div>
         </div>
